--- a/nandighosh-bus/index.html
+++ b/nandighosh-bus/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/public/nandighosh-bus.avif" />
+    <link rel="icon" type="image/svg+xml" href="/nandighosh-bus.avif" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nandighosh Bus</title>
   </head>
